# KAIROS

./: .claudeignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  claudeignore.md  docker-compose.prod.yml  docker-compose.yaml  init_workspace.ps1  main.py  pyproject.toml  skills-lock.json
alembic/: env.py
alembic/versions/: 257c98f95577_add_tenants_and_tenant_id_to_users.py  5887c37e768c_add_projects_deliverables_invoices.py  9f336b4c00bb_initial.py  a1b2c3d4e5f6_add_refresh_tokens.py  b1c2d3e4f5a6_add_organizations.py  c1d2e3f4a5b6_add_avatar_url_to_users.py  d1e2f3a4b5c6_add_conversations_messages.py  e1f2a3b4c5d6_add_documents.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/constants/: navigation.ts  query-keys.ts  roles.ts  routes.ts
frontend/src/hooks/: use-auth.ts  use-conversations.ts  use-dashboard.ts  use-deliverables.ts  use-documents.ts  use-invoices.ts  use-organizations.ts  use-projects.ts
frontend/src/stores/: auth.store.ts  ui.store.ts
frontend/src/types/: api.types.ts  auth.types.ts  conversation.types.ts  dashboard.types.ts  deliverable.types.ts  document.types.ts  invoice.types.ts  organization.types.ts  project.types.ts  tenant.types.ts
scripts/: seed.py  start.sh
src/api/: main.py
src/api/routers/: users.py
src/api/schemas/: user_schemas.py
src/application/accept_invitation/: command.py  handler.py  ports.py
src/application/approve_deliverable/: command.py  handler.py
src/application/change_member_role/: command.py  handler.py  ports.py
src/application/create_conversation/: command.py  handler.py  ports.py
src/application/create_organization/: command.py  handler.py  (+1 more)
src/domain/: __init__.py
tests/: conftest.py  helpers.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_ai_summary.py  test_api_gaps.py  test_auth_errors.py  test_auth_flow.py  test_dashboard_stats.py  test_deliverable_flow.py  test_document_flow.py  test_e2e_lanceflow.py  test_invite_sends_email.py  test_invoice_flow.py  test_member_management.py  test_organization_errors.py  test_organization_flow.py  test_project_flow.py  test_registration_errors.py  test_tenant_isolation.py  test_update_profile.py
tests/unit/: test_ai_summary.py  test_conversation.py  test_deliverable.py  test_document.py  test_email_templates.py  test_extract_action_items.py  test_generate_deliverable_feedback.py  test_invoice.py  test_message.py  test_messaging_handlers.py  test_organization.py  test_organization_validation.py  test_project.py  test_refresh_token.py  test_register_user_sends_email.py  test_user_validation.py
(+282 files in other folders)
