[project]
name = "boiler-plate-saas"
version = "0.1.0"
description = "Hexagonal Architecture SaaS Boilerplate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # ORM + async drivers
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",          # PostgreSQL async driver (production)
    "aiosqlite>=0.20.0",        # SQLite async driver (dev / tests)
    # Config
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    # Security
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",              # async test client for FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
